--- a/src/app/components/auth/styles/form.less
+++ b/src/app/components/auth/styles/form.less
@@ -1,3 +1,29 @@
-.control-error {
-    .font(13px, 20px);
+.form {
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.form-title {
+    .font-h2();
+}
+
+.form-row {
+    & + & {
+        margin-top: 15px;
+    }
+
+    &.form-row_actions {
+        margin-top: 30px;
+    }
+}
+
+.form-field {
+    position: relative;
+}
+
+.form-error {
+    position: absolute;
+    bottom: -20px;
+    left: 0;
 }
