--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -4,6 +4,7 @@
 @color-gray: #666;
 @color-gray-light: #d1d1d1;
 @color-gray-extra-light: #f1f1f1;
+@color-gray-extra-light2: #f5f5f5;
 @color-warning: #fab619;
 @color-error: #e01f19;
 @color-success: #31af91;
