added notification module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<button (click)="addNotification({text: 'Привет', type: 'success'})">
+    Добавить нотификацию
+</button>
+
 <router-outlet></router-outlet>
+
+<app-notifications></app-notifications>
