--- a/src/styles/text.less
+++ b/src/styles/text.less
@@ -96,6 +96,16 @@
     }
 }
 
+.font-p2() {
+    @media @mobile {
+        .font(14px, 18px);
+    }
+
+    @media @tablet-min {
+        .font(16px, 20px);
+    }
+}
+
 .font-p3(@type: 1) {
     @media @mobile {
         .font(12px, 16px);
