--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -5,6 +5,6 @@
 @color-gray-light: #d1d1d1;
 @color-gray-extra-light: #f1f1f1;
 @color-gray-extra-light2: #f5f5f5;
-@color-warning: #fab619;
-@color-error: #e01f19;
-@color-success: #31af91;
+@color-orange: #f2be0a;
+@color-green-light: #72b55f;
+@color-red: #f54444;
