--- a/src/app/modules/words/components/add-word/add-word.component.less
+++ b/src/app/modules/words/components/add-word/add-word.component.less
@@ -10,6 +10,14 @@
         margin-top: 5px;
         margin-bottom: 25px;
     }
+
+    &_with-button {
+        display: flex;
+    }
+}
+
+.delete-button {
+    margin-top: 5px;
 }
 
 .delete {
