--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="form">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
     <h2 class="form-title">
         Войти в тренажер
     </h2>
@@ -37,6 +37,7 @@
                 mat-raised-button
                 color="primary"
                 class="button"
+                type="submit"
                 [disabled]="form.invalid"
             >
                 Войти
