--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
+<form automation-id="form" class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
     <h2 class="form-title">
         Войти в тренажер
     </h2>
@@ -7,6 +7,7 @@
             <mat-form-field class="form-field">
                 <mat-label>E-mail</mat-label>
                 <input
+                    automation-id="email-input"
                     matInput
                     placeholder="Введите e-mail"
                     [formControl]="emailControl"
@@ -21,6 +22,7 @@
             <mat-form-field class="form-field">
                 <mat-label>Пароль</mat-label>
                 <input
+                    automation-id="password-input"
                     type="password"
                     matInput
                     placeholder="Введите пароль"
@@ -34,6 +36,7 @@
         </div>
         <div class="form-row form-row_actions">
             <button
+                automation-id="submit-button"
                 mat-raised-button
                 color="primary"
                 class="button"
