added notifications when login was failed

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,3 +1,10 @@
 :host {
     display: block;
 }
+
+.notifications {
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    max-width: 400px;
+}
