--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <router-outlet></router-outlet>
 
-<app-notifications></app-notifications>
+<app-notifications class="notifications"></app-notifications>
