--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,50 +1,52 @@
-<form automation-id="form" class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
-    <h2 class="form-title">
-        Войти в тренажер
-    </h2>
-    <div class="form-content">
-        <div class="form-row">
-            <mat-form-field class="form-field">
-                <mat-label>E-mail</mat-label>
-                <input
-                    automation-id="email-input"
-                    matInput
-                    placeholder="Введите e-mail"
-                    [formControl]="emailControl"
-                />
-                <app-form-control-error
-                    class="form-error"
-                    [control]="emailControl"
-                ></app-form-control-error>
-            </mat-form-field>
+<app-loader automation-id="loader" [showLoader]="showLoader$ | async">
+    <form automation-id="form" class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
+        <h2 class="form-title">
+            Войти в тренажер
+        </h2>
+        <div class="form-content">
+            <div class="form-row">
+                <mat-form-field class="form-field">
+                    <mat-label>E-mail</mat-label>
+                    <input
+                        automation-id="email-input"
+                        matInput
+                        placeholder="Введите e-mail"
+                        [formControl]="emailControl"
+                    />
+                    <app-form-control-error
+                        class="form-error"
+                        [control]="emailControl"
+                    ></app-form-control-error>
+                </mat-form-field>
+            </div>
+            <div class="form-row">
+                <mat-form-field class="form-field">
+                    <mat-label>Пароль</mat-label>
+                    <input
+                        automation-id="password-input"
+                        type="password"
+                        matInput
+                        placeholder="Введите пароль"
+                        [formControl]="passwordControl"
+                    />
+                    <app-form-control-error
+                        class="form-error"
+                        [control]="passwordControl"
+                    ></app-form-control-error>
+                </mat-form-field>
+            </div>
+            <div class="form-row form-row_actions">
+                <button
+                    automation-id="submit-button"
+                    mat-raised-button
+                    color="primary"
+                    class="button"
+                    type="submit"
+                    [disabled]="form.invalid"
+                >
+                    Войти
+                </button>
+            </div>
         </div>
-        <div class="form-row">
-            <mat-form-field class="form-field">
-                <mat-label>Пароль</mat-label>
-                <input
-                    automation-id="password-input"
-                    type="password"
-                    matInput
-                    placeholder="Введите пароль"
-                    [formControl]="passwordControl"
-                />
-                <app-form-control-error
-                    class="form-error"
-                    [control]="passwordControl"
-                ></app-form-control-error>
-            </mat-form-field>
-        </div>
-        <div class="form-row form-row_actions">
-            <button
-                automation-id="submit-button"
-                mat-raised-button
-                color="primary"
-                class="button"
-                type="submit"
-                [disabled]="form.invalid"
-            >
-                Войти
-            </button>
-        </div>
-    </div>
-</form>
+    </form>
+</app-loader>
