[feature] added sidebar component

--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -1,9 +1,10 @@
 <div class="info">
     <button
-        automation-id="toggle"
+        automation-id="open-menu"
         mat-icon-button
         color="primary"
         aria-label="Открыть меню"
+        (click)="openMenu()"
     >
         <mat-icon
             svgIcon="toggle"
