--- a/src/app/modules/layout/layout.component.less
+++ b/src/app/modules/layout/layout.component.less
@@ -1,3 +1,20 @@
 :host {
     display: block;
 }
+
+.layout {
+    height: 100vh;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    flex-shrink: 0;
+}
+
+.content {
+    flex-grow: 1;
+}
