[feature] added sidebar facade service + sidebar styles

--- a/src/app/modules/layout/components/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/components/sidebar/sidebar.component.html
@@ -1,1 +1,5 @@
-<p>sidebar works!</p>
+<ul class="list">
+    <li *ngFor="let item of allMenuItems" class="item">
+        <a class="link" [routerLink]="item.navigateTo">{{ item.title }}</a>
+    </li>
+</ul>
