--- a/src/app/modules/layout/components/sidebar/sidebar.component.less
+++ b/src/app/modules/layout/components/sidebar/sidebar.component.less
@@ -1,3 +1,23 @@
+@import '../../../../../styles/index';
+
 :host {
     display: block;
+}
+
+.list {
+    padding: 10px 0;
+    margin: 0;
+    list-style: none;
+}
+
+.link {
+    .font-h5();
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: inherit;
+
+    &:hover {
+        background-color: @color-gray-extra-light;
+    }
 }
