--- a/src/app/modules/words/components/add-word/add-word.component.html
+++ b/src/app/modules/words/components/add-word/add-word.component.html
@@ -1,96 +1,98 @@
-<form automation-id="form" class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
-    <h2 class="form-title">
-        Добавить слово
-    </h2>
-    <div class="form-content">
-        <div class="form-row">
-            <mat-form-field class="form-field">
-                <mat-label>Слово на английском</mat-label>
-                <input
-                    automation-id="english-word"
-                    matInput
-                    placeholder="Введите слово на английском"
-                    [formControl]="englishWordControl"
-                />
-                <app-form-control-error
-                    class="form-error"
-                    [control]="englishWordControl"
-                ></app-form-control-error>
-            </mat-form-field>
-        </div>
-        <div class="form-row">
-            <mat-form-field class="form-field">
-                <mat-label>Слово на русском</mat-label>
-                <input
-                    automation-id="russian-word"
-                    matInput
-                    placeholder="Введите слово на русском"
-                    [formControl]="russianWordControl"
-                />
-                <app-form-control-error
-                    class="form-error"
-                    [control]="russianWordControl"
-                ></app-form-control-error>
-            </mat-form-field>
-        </div>
-        <ng-container *ngIf="synonymsControl.controls.length">
-            <div
-                *ngFor="let synonym of synonymsControl.controls; let i = index"
-                class="form-row form-row_with-button"
-            >
+<app-loader automation-id="loader" [showLoader]="showLoader$ | async">
+    <form automation-id="form" class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
+        <h2 class="form-title">
+            Добавить слово
+        </h2>
+        <div class="form-content">
+            <div class="form-row">
                 <mat-form-field class="form-field">
-                    <mat-label>Синоним на русском</mat-label>
+                    <mat-label>Слово на английском</mat-label>
                     <input
+                        automation-id="english-word"
                         matInput
-                        placeholder="Введите синоним на русском"
-                        [attr.automation-id]="'synonym-' + i"
-                        [formControl]="synonym"
+                        placeholder="Введите слово на английском"
+                        [formControl]="englishWordControl"
                     />
                     <app-form-control-error
                         class="form-error"
-                        [control]="synonym"
+                        [control]="englishWordControl"
                     ></app-form-control-error>
                 </mat-form-field>
-
-                <button
-                    class="delete-button"
-                    mat-icon-button
-                    color="warn"
-                    type="button"
-                    aria-label="Кнопка удаления синонима"
-                    [attr.automation-id]="'delete-synonym-' + i"
-                    (click)="removeSynonym(i)"
+            </div>
+            <div class="form-row">
+                <mat-form-field class="form-field">
+                    <mat-label>Слово на русском</mat-label>
+                    <input
+                        automation-id="russian-word"
+                        matInput
+                        placeholder="Введите слово на русском"
+                        [formControl]="russianWordControl"
+                    />
+                    <app-form-control-error
+                        class="form-error"
+                        [control]="russianWordControl"
+                    ></app-form-control-error>
+                </mat-form-field>
+            </div>
+            <ng-container *ngIf="synonymsControl.controls.length">
+                <div
+                    *ngFor="let synonym of synonymsControl.controls; let i = index"
+                    class="form-row form-row_with-button"
                 >
-                    <mat-icon
-                        class="delete"
-                        svgIcon="delete"
-                        aria-hidden="false"
-                        aria-label="Иконка удаления синонима"
-                    ></mat-icon>
+                    <mat-form-field class="form-field">
+                        <mat-label>Синоним на русском</mat-label>
+                        <input
+                            matInput
+                            placeholder="Введите синоним на русском"
+                            [attr.automation-id]="'synonym-' + i"
+                            [formControl]="synonym"
+                        />
+                        <app-form-control-error
+                            class="form-error"
+                            [control]="synonym"
+                        ></app-form-control-error>
+                    </mat-form-field>
+
+                    <button
+                        class="delete-button"
+                        mat-icon-button
+                        color="warn"
+                        type="button"
+                        aria-label="Кнопка удаления синонима"
+                        [attr.automation-id]="'delete-synonym-' + i"
+                        (click)="removeSynonym(i)"
+                    >
+                        <mat-icon
+                            class="delete"
+                            svgIcon="delete"
+                            aria-hidden="false"
+                            aria-label="Иконка удаления синонима"
+                        ></mat-icon>
+                    </button>
+                </div>
+            </ng-container>
+
+            <div class="form-row form-row_meta">
+                <button
+                    automation-id="add-synonym-button"
+                    mat-stroked-button
+                    type="button"
+                    (click)="addSynonym()"
+                >
+                    Добавить синоним
                 </button>
             </div>
-        </ng-container>
-
-        <div class="form-row form-row_meta">
-            <button
-                automation-id="add-synonym-button"
-                mat-stroked-button
-                type="button"
-                (click)="addSynonym()"
-            >
-                Добавить синоним
-            </button>
+            <div class="form-row form-row_actions">
+                <button
+                    automation-id="submit-button"
+                    mat-raised-button
+                    color="primary"
+                    type="submit"
+                    [disabled]="form.invalid"
+                >
+                    Добавить слово
+                </button>
+            </div>
         </div>
-        <div class="form-row form-row_actions">
-            <button
-                automation-id="submit-button"
-                mat-raised-button
-                color="primary"
-                type="submit"
-                [disabled]="form.invalid"
-            >
-                Добавить слово
-            </button>
-        </div>
-    </div>
-</form>
+    </form>
+</app-loader>
