[feature] added catalog component

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -23,7 +23,9 @@
             (openSidebar)="sidebar.open()"
         ></app-header>
         <div class="content">
-            <router-outlet></router-outlet>
+            <div class="container">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
