--- a/src/app/modules/utils/components/loader/loader.component.html
+++ b/src/app/modules/utils/components/loader/loader.component.html
@@ -1,4 +1,8 @@
-<div automation-id="content" class="content" [class.content_with-overlay]="showOverlay">
+<div
+    automation-id="content"
+    class="content"
+    [class.content_with-overlay]="showOverlay && showLoader"
+>
     <ng-content> </ng-content>
 </div>
 <div *ngIf="showLoader" automation-id="loader" class="loader">
