--- a/src/app/modules/layout/layout.component.less
+++ b/src/app/modules/layout/layout.component.less
@@ -17,10 +17,12 @@
 }
 
 .content {
+    display: flex;
     flex-grow: 1;
 }
 
 .container {
+    width: 100%;
     max-width: 890px;
     margin: 0 auto;
 }
