--- a/src/app/modules/layout/components/sidebar/sidebar.component.less
+++ b/src/app/modules/layout/components/sidebar/sidebar.component.less
@@ -17,7 +17,8 @@
     text-decoration: none;
     color: inherit;
 
-    &:hover {
+    &:hover,
+    &_active {
         background-color: @color-gray-extra-light;
     }
 }
