[feature] added remove word

--- a/src/app/modules/words/components/words-list/words-list.component.html
+++ b/src/app/modules/words/components/words-list/words-list.component.html
@@ -67,6 +67,7 @@
                         matTooltipPosition="above"
                         color="warn"
                         class="action"
+                        (click)="removeWord(word.id)"
                     >
                         <mat-icon class="action" svgIcon="delete"></mat-icon>
                     </button>
