--- a/src/app/modules/words/components/words-list/words-list.component.html
+++ b/src/app/modules/words/components/words-list/words-list.component.html
@@ -35,7 +35,10 @@
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Дата добавления</th>
             <td mat-cell *matCellDef="let word">
-                {{ word.date.toDate() | date: 'dd.MM.yyyy в HH:mm' }}
+                {{
+                    (word.date.seconds ? word.date.toDate() : word.date)
+                        | date: 'dd.MM.yyyy в HH:mm'
+                }}
             </td>
         </ng-container>
 
